# ChangeLog for virtual/libiconv
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/libiconv/ChangeLog,v 1.3 2008/01/25 19:40:48 grobian Exp $

  25 Jan 2008; Fabian Groffen <grobian@gentoo.org> libiconv-0.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> libiconv-0.ebuild:
  Added ~sparc-fbsd keyword.

*libiconv-0 (13 Apr 2006)

  13 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +libiconv-0.ebuild:
  Add virtual/libiconv to add runtime dependency when packages needs a GNU
  implementation of iconv() function. It's a no-op for GLIBC and uClibc
  systems, and points to libiconv for the others.
