@@ -1,22 +1,24 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/libiconv/libiconv-0.ebuild,v 1.4 2008/01/25 19:40:48 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/libiconv/libiconv-0.ebuild,v 1.5 2009/12/15 18:12:39 abcd Exp $
+
+EAPI="2"
 
 DESCRIPTION="Virtual for the GNU conversion library"
 HOMEPAGE="http://www.gentoo.org/proj/en/gentoo-alt/"
 SRC_URI=""
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc ~sparc-fbsd x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86 ~ppc-aix ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
 IUSE=""
 DEPEND=""
 
-# - Use this syntax (defining the various libcs) as this allows to use-mask if the
-# dep is not present for some Linux systems; using the !elibc_glibc() syntax
-# would lead to problems for libiconv for example
 # - Don't put elibc_glibc? ( sys-libs/glibc ) to avoid circular deps between
 # that and gcc
-RDEPEND="elibc_FreeBSD? ( dev-libs/libiconv )
-	elibc_NetBSD? ( dev-libs/libiconv )
-	elibc_OpenBSD? ( dev-libs/libiconv )
-	elibc_DragonFly? ( dev-libs/libiconv )"
+RDEPEND="
+	elibc_uclibc? ( || (
+		sys-libs/uclibc[iconv]
+		dev-libs/libiconv
+	) )
+	!elibc_glibc? ( !elibc_uclibc? ( dev-libs/libiconv ) )
+"
