@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>bsd</herd>
+<herd>no-herd</herd>
+<maintainer>
+	<email>alt@gentoo.org</email>
+	<name>Gentoo Alt</name>
+</maintainer>
 </pkgmetadata>
