@@ -1,6 +1,11 @@
 # ChangeLog for virtual/libiconv
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/libiconv/ChangeLog,v 1.3 2008/01/25 19:40:48 grobian Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/libiconv/ChangeLog,v 1.4 2009/12/15 18:12:39 abcd Exp $
+
+  15 Dec 2009; Jonathan Callen <abcd@gentoo.org> libiconv-0.ebuild,
+  metadata.xml:
+  QA: Add prefix keywords; clean up deps for prefix; change maintainer to
+  alt@g.o
 
   25 Jan 2008; Fabian Groffen <grobian@gentoo.org> libiconv-0.ebuild:
   Dropped ppc-macos keyword, see you in prefix
